--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -3,23 +3,22 @@ name: Update README with latest activity
 on:
   schedule:
     # Runs every 6 hours
-    - cron: '0 */6 * * *'
+    - cron: "0 */6 * * *"
   workflow_dispatch:
 
 jobs:
   update-readme:
     runs-on: ubuntu-latest
-    
+
     permissions:
       contents: write
-    
+
     steps:
-      - uses: actions/checkout@v4
-      
       - name: Update README with latest GitHub activity
-        uses: jamesgeorge007/github-activity-readme@master
+      - uses: actions/checkout@v4
+      - uses: jamesgeorge007/github-activity-readme@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          COMMIT_MSG: '✨ Update README with latest GitHub activity'
+          COMMIT_MSG: "✨ Update README with latest GitHub activity"
           MAX_LINES: 5
